# internal/article/model.go
@@ -1,11 +1,10 @@
-package domain
+package article
 
-type FreeBook struct {
+type Article struct {
 	ID          int     `json:"id"`
 	Title       string  `json:"title"`
-	Summary     *string `json:"summary"`
+	Summary     string  `json:"summary"`
 	Author      string  `json:"author"`
 	Cover_image string  `json:"cover_image"`
-	Pdf_file    string  `json:"pdf_file"`
-	Pages       int     `json:"pages"`
+	Pdf_file    *string `json:"pdf_file"`
 }
